--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "@11ty/eleventy": "^2.0.1",
+        "@11ty/eleventy": "^3.0.0-alpha.13",
         "@11ty/eleventy-plugin-directory-output": "^1.0.1"
     }
 }
